tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_77.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  z := (((- (q MOD 1223)) + ((1223 + 0) MOD (2 + 200))) * (((0 DIV 200) - (- 2)) + (+ (x MOD 200))));
               p := ((((y - x) - (- 1223)) - ((0 + 0) + (- y))) < (- ((+ 200) + (2 DIV x))));
               y := (((+ (+ x)) + ((x MOD 1223) + (x MOD x))) + ((- (1223 - 1223)) DIV ((200 MOD x) DIV (1223 - 1))));
               x := ((((x DIV z) * (z - 0)) * (+ (1223 * 1223))) - (((z MOD 1223) MOD (200 * 1223)) + ((+ 1) * (200 + x))));
               r := ((((- y) # (200 DIV 0)) & ((+ 1) < (x * z))) OR (((- 0) DIV (- 0)) # ((0 + 1223) * (1 + 1223))));
               z := ((((2 MOD x) DIV (200 - 200)) MOD ((1223 MOD z) + (200 + z))) * (+ ((- x) + (z DIV y))));
               q := (((+ (1 + x)) + ((1 DIV 1223) * (- z))) >= (((1223 MOD y) MOD (y MOD z)) MOD (+ (- x))));
               r := (((- (1223 + z)) + ((+ y) - (- 2))) = (- ((1 * 200) + (y * 1))));
               p := ((((0 DIV x) MOD (0 DIV 1223)) + ((y MOD 1223) MOD (- 2))) = (((2 MOD z) * (y * 1223)) + (- (+ 1))));
               q := ((((x * y) = (+ 0)) & ((1223 + z) >= (y * x))) & (((0 DIV x) * (2 + 1223)) # (- (1223 DIV 0))))
END Test11.